<resources>
    <string name="app_name">feh</string>
    <string name="search_hint">alfonse</string>
    <string name="prompt_rarity">rarity</string>
    <string name="prompt_merge">merge</string>
    <string-array name="array_merge">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="prompt_boon">boon</string>
    <string-array name="array_stat">
        <item>hp</item>
        <item>atk</item>
        <item>spd</item>
        <item>def</item>
        <item>res</item>
    </string-array>
    <string name="prompt_bane">bane</string>

    <string name="prompt_rar_mrg">rarity/merge</string>
    <string name="prompt_bb">boon/bane</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="confirm">confirm</string>

    <string name="title_progress">progress</string>
    <string name="content_progress">please wait</string>
    <string name="done">done</string>

    <string name="key_update_local">sync_db</string>
    <string name="title_update_local">update database</string>
    <string name="summ_update_local">sync with gamepedia</string>

    <string name="key_update_new_local">sync_new_db</string>
    <string name="title_update_new_local">update only new heroes</string>
    <string name="summ_update_new_local">sync with gamepedia</string>

    <string name="key_wipe_nation">wipe_nation</string>
    <string name="title_wipe_nation">wipe data</string>
    <string name="summ_wipe_nation">clear my heroes data</string>

    <string name="title_send_home">send home</string>
    <string name="summ_send_home">send this hero home</string>

    <string name="title_edit_hero">edit info</string>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
