<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="alfonse"
        android:textAppearance="@style/ListHeader"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_mv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:maxHeight="28dp"
            android:maxWidth="28dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/icon_move_armored" />

        <ImageView
            android:id="@+id/iv_wpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:maxHeight="32dp"
            android:maxWidth="32dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/icon_class_red_tome" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/et_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:hint="nickname"
            android:inputType="textPersonName"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_rar_mrg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_rar_mrg"
                android:textAppearance="@style/ListChild"
                app:layout_constraintStart_toEndOf="@+id/textView" />

            <Spinner
                android:id="@+id/rar_spinner"
                style="@style/SpinnerSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/prompt_rarity"
                app:layout_constraintStart_toEndOf="@+id/txt_rar" />

            <Spinner
                android:id="@+id/mrg_spinner"
                style="@style/SpinnerSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/array_merge"
                android:prompt="@string/prompt_merge"
                app:layout_constraintStart_toEndOf="@+id/txt_mrg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_boon_bane"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/prompt_bb"
                android:textAppearance="@style/ListChild"
                app:layout_constraintStart_toEndOf="@+id/mrg_spinner" />

            <Spinner
                android:id="@+id/boon_spinner"
                style="@style/SpinnerSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:entries="@array/array_stat"
                android:prompt="@string/prompt_boon"
                app:layout_constraintStart_toEndOf="@+id/txt_boon" />

            <Spinner
                android:id="@+id/bane_spinner"
                style="@style/SpinnerSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/array_stat"
                android:prompt="@string/prompt_bane"
                app:layout_constraintStart_toEndOf="@+id/txt_bane" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>